--- a/site/index.html
+++ b/site/index.html
@@ -14,11 +14,15 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="./discode.png" />
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header class="shell">
-      <a class="brand" href="#">discode</a>
+      <a class="brand" href="#">
+        <img src="./discode.png" alt="Discode crab icon" class="brand-icon" />
+        <span>discode</span>
+      </a>
       <a class="repo" href="https://github.com/siisee11/discode" target="_blank" rel="noreferrer">GitHub</a>
     </header>
 
