style: enlarge landing brand icon and title

--- a/site/index.html
+++ b/site/index.html
@@ -21,7 +21,7 @@
     <header class="shell">
       <a class="brand" href="#">
         <img src="./discode.png" alt="Discode crab icon" class="brand-icon" />
-        <span>discode</span>
+        <span class="brand-label">Discode</span>
       </a>
       <a class="repo" href="https://github.com/siisee11/discode" target="_blank" rel="noreferrer">GitHub</a>
     </header>
