style: refine landing brand and hero copy

--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&family=Nunito+Sans:wght@800;900&family=JetBrains+Mono:wght@400;500&display=swap"
       rel="stylesheet"
     />
     <link rel="icon" type="image/png" href="./discode.png" />
@@ -30,10 +30,7 @@
       <section class="hero">
         <p class="tag">Open-source AI bridge</p>
         <h1>Run your AI coding sessions. Watch everything in Discord.</h1>
-        <p>
-          Discode connects tmux-based agent sessions to Discord channels so teams can follow progress without
-          screen sharing.
-        </p>
+        <p>Discode connects tmux-based agent sessions to Discord channels.</p>
         <div class="actions">
           <a class="button button-primary" href="#quickstart">Get started</a>
         </div>
