copy: emphasize terminal-to-discord control

--- a/site/index.html
+++ b/site/index.html
@@ -33,7 +33,7 @@
         <section class="hero">
           <p class="news"><span>새소식</span> Discode 0.1.1 release. Install with one curl command.</p>
           <h1>Orchestrate coding agents on Discord.</h1>
-          <p class="subtitle">Run sessions, stream tmux output, and keep your whole team in sync in one channel.</p>
+          <p class="subtitle">Run AI sessions in your terminal and control them from Discord.</p>
         </section>
 
         <section class="install-card" aria-label="Install command">
