feat: streamline onboarding and refresh landing copy

--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Discode - AI sessions in Discord</title>
+    <title>Discode - Your ultimate IDE is a messenger</title>
     <meta
       name="description"
       content="A simple bridge for running AI coding sessions and watching progress in Discord."
@@ -31,9 +31,9 @@
 
       <main class="shell">
         <section class="hero">
-          <p class="news"><span>새소식</span> Discode 0.1.1 release. Install with one curl command.</p>
-          <h1>Orchestrate coding agents on Discord.</h1>
-          <p class="subtitle">Run AI sessions in your terminal and control them from Discord.</p>
+          <p class="news"><span>새소식</span> Discode 0.1.1 is out. Install it with one curl command.</p>
+          <h1>Your ultimate IDE is a messenger.</h1>
+          <p class="subtitle">Orchestrate coding agents on Discord.</p>
         </section>
 
         <section class="install-card" aria-label="Install command">
@@ -44,6 +44,16 @@
             <button class="tab" role="tab" data-tab="brew" aria-selected="false">brew</button>
           </div>
           <pre><code id="install-command">curl -fsSL https://discode.chat/install | bash</code></pre>
+        </section>
+
+        <section class="demo-section" aria-label="Discode demo">
+          <img src="./demo.png" alt="Discode demo" class="demo-image" />
+          <div class="about-copy">
+            <h2>What is Discode?</h2>
+            <p>Discode is a bridge that connects your AI CLI to your favorite messenger.</p>
+            <p>Supported AI CLIs: Claude Code, OpenCode, and Codex (polling).</p>
+            <p>Supported messenger: Discord only.</p>
+          </div>
         </section>
       </main>
     </div>
