style: tune landing spacing around demo section

--- a/site/index.html
+++ b/site/index.html
@@ -29,7 +29,7 @@
         </nav>
       </header>
 
-      <main class="shell">
+      <main class="shell main-shell">
         <section class="hero">
           <p class="news"><span>새소식</span> Discode 0.1.1 is out. Install it with one curl command.</p>
           <h1>Your ultimate IDE is a messenger.</h1>
