--- a/site/index.html
+++ b/site/index.html
@@ -32,7 +32,7 @@
 
       <main class="shell main-shell">
         <section class="hero">
-          <p class="news"><span>new</span> Discode 0.2.0 is out. Install it with one curl command.</p>
+          <p class="news"><span>new</span> Discode 0.2.5 tightens shared-session TUI with current-window project focus.</p>
           <h1>Your ultimate IDE is a messenger.</h1>
           <p class="subtitle">Orchestrate coding agents on Discord.</p>
         </section>
