--- a/site/index.html
+++ b/site/index.html
@@ -64,9 +64,9 @@
           <p class="news">
             <span data-i18n-en="new" data-i18n-ko="new">new</span>
             <span
-              data-i18n-en="Discode 0.3.0 adds uninstall flow, smarter state cleanup, and cleaner Claude relay outputs."
-              data-i18n-ko="Discode 0.3.0은 uninstall 흐름, 더 똑똑한 상태 정리, 더 깔끔한 Claude 중계 출력을 제공합니다."
-              >Discode 0.3.0 adds uninstall flow, smarter state cleanup, and cleaner Claude relay outputs.</span
+              data-i18n-en="Discode 0.4.0 delivers a full CLI and bridge refactor with unified policies, stronger safety tests, and clearer module boundaries."
+              data-i18n-ko="Discode 0.4.0은 통합 정책, 강화된 안전 테스트, 명확한 모듈 경계를 포함한 CLI/브리지 전면 리팩토링을 제공합니다."
+              >Discode 0.4.0 delivers a full CLI and bridge refactor with unified policies, stronger safety tests, and clearer module boundaries.</span
             >
           </p>
           <h1 data-i18n-en="Your ultimate IDE is a messenger." data-i18n-ko="당신의 궁극의 IDE는 메신저입니다.">
