feat(site): add landing install copy button
Add a one-click copy control to the landing install command block with localized labels and clipboard fallback support for reliable command copying.

--- a/site/index.html
+++ b/site/index.html
@@ -97,7 +97,7 @@
             <button class="tab tab-active" role="tab" data-tab="curl" aria-selected="true">curl</button>
             <button class="tab" role="tab" data-tab="brew" aria-selected="false">brew</button>
           </div>
-          <pre><code id="install-command">curl -fsSL https://discode.chat/install | bash</code></pre>
+          <pre class="install-command-block"><code id="install-command">curl -fsSL https://discode.chat/install | bash</code><button id="install-copy-btn" class="install-copy-btn" type="button" aria-label="Copy install command">Copy</button></pre>
         </section>
 
         <section
@@ -204,6 +204,45 @@
 
       const tabs = Array.from(document.querySelectorAll(".tab[data-tab]"));
       const installCommand = document.getElementById("install-command");
+      const installCopyButton = document.getElementById("install-copy-btn");
+      const languageSelects = Array.from(document.querySelectorAll("[data-language-select]"));
+
+      const copyLabels = {
+        en: {
+          copy: "Copy",
+          copied: "Copied",
+          aria: "Copy install command",
+        },
+        ko: {
+          copy: "복사",
+          copied: "복사됨",
+          aria: "설치 명령어 복사",
+        },
+      };
+
+      function currentLanguage() {
+        const lang = (document.documentElement.lang || "en").toLowerCase();
+        return lang.startsWith("ko") ? "ko" : "en";
+      }
+
+      function updateCopyButtonLabel(mode = "copy") {
+        if (!installCopyButton) return;
+        const labels = copyLabels[currentLanguage()] || copyLabels.en;
+        installCopyButton.textContent = labels[mode] || labels.copy;
+        installCopyButton.setAttribute("aria-label", labels.aria);
+      }
+
+      function fallbackCopy(text) {
+        const textArea = document.createElement("textarea");
+        textArea.value = text;
+        textArea.setAttribute("readonly", "");
+        textArea.style.position = "fixed";
+        textArea.style.left = "-9999px";
+        document.body.appendChild(textArea);
+        textArea.select();
+        document.execCommand("copy");
+        document.body.removeChild(textArea);
+      }
 
       function activateTab(nextTab) {
         const tabKey = nextTab.dataset.tab;
@@ -221,6 +260,37 @@
       tabs.forEach((tab) => {
         tab.addEventListener("click", () => activateTab(tab));
       });
+
+      if (installCopyButton) {
+        installCopyButton.addEventListener("click", () => {
+          if (!installCommand) return;
+          const text = installCommand.textContent || "";
+          if (!text) return;
+
+          const writePromise = navigator.clipboard && navigator.clipboard.writeText
+            ? navigator.clipboard.writeText(text)
+            : Promise.resolve().then(() => fallbackCopy(text));
+
+          writePromise
+            .then(() => {
+              updateCopyButtonLabel("copied");
+              window.setTimeout(() => updateCopyButtonLabel("copy"), 1400);
+            })
+            .catch(() => {
+              fallbackCopy(text);
+              updateCopyButtonLabel("copied");
+              window.setTimeout(() => updateCopyButtonLabel("copy"), 1400);
+            });
+        });
+
+        languageSelects.forEach((select) => {
+          select.addEventListener("change", () => {
+            window.setTimeout(() => updateCopyButtonLabel("copy"), 0);
+          });
+        });
+
+        updateCopyButtonLabel("copy");
+      }
     </script>
   </body>
 </html>
