feat(site): add Discord button to landing header

--- a/site/index.html
+++ b/site/index.html
@@ -43,6 +43,7 @@
             >Docs</a
           >
           <a href="https://github.com/siisee11/discode" target="_blank" rel="noreferrer">GitHub</a>
+          <a class="topnav-discord" href="https://discord.gg/NPCqwWuJ" target="_blank" rel="noreferrer">Discord</a>
           <label class="language-picker">
             <span class="sr-only" data-i18n-en="Language" data-i18n-ko="언어">Language</span>
             <select
@@ -64,9 +65,9 @@
           <p class="news">
             <span data-i18n-en="new" data-i18n-ko="new">new</span>
             <span
-              data-i18n-en="Discode 0.5.0 adds Slack as an alternative messaging platform and expands file relay to support images and documents."
-              data-i18n-ko="Discode 0.5.0은 대체 메시징 플랫폼으로 Slack을 지원하고 이미지/문서 파일 중계를 확장합니다."
-              >Discode 0.5.0 adds Slack as an alternative messaging platform and expands file relay to support images and documents.</span
+              data-i18n-en="Discode 0.6.0 adds direct file transfer with discode send, hardens auto-TUI startup routing, and improves missing tmux target guidance."
+              data-i18n-ko="Discode 0.6.0은 discode send 직접 파일 전송을 추가하고, auto-TUI 시작 라우팅 안정성과 tmux 대상 누락 안내를 개선했습니다."
+              >Discode 0.6.0 adds direct file transfer with discode send, hardens auto-TUI startup routing, and improves missing tmux target guidance.</span
             >
           </p>
           <h1 data-i18n-en="Your ultimate IDE is a messenger." data-i18n-ko="당신의 궁극의 IDE는 메신저입니다.">
