--- a/site/index.html
+++ b/site/index.html
@@ -65,9 +65,9 @@
           <p class="news">
             <span data-i18n-en="new" data-i18n-ko="new">new</span>
             <span
-              data-i18n-en="Discode 0.7.2 sharpens TUI runtime focus and stream reconnection, with a blinking AI cursor for clearer live output."
-              data-i18n-ko="Discode 0.7.2는 TUI 런타임 포커스와 스트림 재연결을 개선하고, 라이브 출력 가독성을 높이는 깜빡이는 AI 커서를 추가했습니다."
-              >Discode 0.7.2 sharpens TUI runtime focus and stream reconnection, with a blinking AI cursor for clearer live output.</span
+              data-i18n-en="Discode 0.7.3 adds runtime selection during onboard with pty as default and a tmux guidance note for advanced users."
+              data-i18n-ko="Discode 0.7.3은 onboard에서 런타임 선택을 추가하고 기본값을 pty로 설정했으며, 고급 사용자를 위한 tmux 안내 문구를 제공합니다."
+              >Discode 0.7.3 adds runtime selection during onboard with pty as default and a tmux guidance note for advanced users.</span
             >
           </p>
           <h1 data-i18n-en="Your ultimate IDE is a messenger." data-i18n-ko="당신의 궁극의 IDE는 메신저입니다.">
