--- a/site/index.html
+++ b/site/index.html
@@ -72,9 +72,9 @@
           <p class="news">
             <span data-i18n-en="new" data-i18n-ko="new">new</span>
             <span
-              data-i18n-en="Discode 0.7.5 adds GA4 web analytics and optional CLI telemetry with Cloudflare Worker proxy support."
-              data-i18n-ko="Discode 0.7.5는 GA4 웹 분석과 Cloudflare Worker 프록시 기반의 선택형 CLI 텔레메트리를 추가합니다."
-              >Discode 0.7.5 adds GA4 web analytics and optional CLI telemetry with Cloudflare Worker proxy support.</span
+              data-i18n-en="Discode 0.7.6 adds per-agent container isolation, Chrome MCP bridge support, and tmux-first onboarding."
+              data-i18n-ko="Discode 0.7.6은 에이전트별 컨테이너 격리, Chrome MCP 브리지 지원, tmux 우선 온보딩을 추가합니다."
+              >Discode 0.7.6 adds per-agent container isolation, Chrome MCP bridge support, and tmux-first onboarding.</span
             >
           </p>
           <h1 data-i18n-en="Your ultimate IDE is a messenger." data-i18n-ko="당신의 궁극의 IDE는 메신저입니다.">
